tests/lowering/invalid-super-or-crate-in-use-declaration.stderr
error[E026]: path hanger `super` not allowed in this position
 >>> ${DIRECTORY}/lowering/invalid-super-or-crate-in-use-declaration.lushui:3:14
  |
3 | use foo.bar.(super.ban crate self)
  |              ^^^^^ 
  |
 help: consider moving this path to its own separate use declaration

error[E026]: path hanger `crate` not allowed in this position
 >>> ${DIRECTORY}/lowering/invalid-super-or-crate-in-use-declaration.lushui:3:24
  |
3 | use foo.bar.(super.ban crate self)
  |                        ^^^^^ 
  |
 help: consider moving this path to its own separate use declaration

error: aborting due to 2 previous errors

